fix: gap de 20 px na parte do sobre mim completo

--- a/css/sobre.css
+++ b/css/sobre.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    
+    gap: 20px;
     
 }
 
